fix: post content alignment on casper v4 (again)

--- a/public/css/comments.css
+++ b/public/css/comments.css
@@ -207,6 +207,6 @@
 	border-radius: 100%;
 }
 
-#nodebb .post-content {
+#nodebb-comments-list .post-content {
 	display: inline;
 }
